Virtual thread is used for auto saving in cli